🐛 FIX: Double z-index

--- a/client/assets/styles/popup.scss
+++ b/client/assets/styles/popup.scss
@@ -11,7 +11,6 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  z-index: 8;
   position: fixed;
   overflow: hidden;
   left: 0;
